# shade

./: .env.example  .env.production.example  .gitignore  Cargo.toml  DEPLOYMENT.md  DOCS.md  Dockerfile  Makefile  OAUTH_SETUP.md  PROBLEMS.md  QUICKSTART.md  README.md  deploy-prod.sh  docker-compose.prod.yml  docker-compose.yml  start.sh
cktech/: .env.example  README.md  docker-compose.yml  nginx-shade.conf
docs/providers/: AZURE.md  GITHUB.md  GOOGLE.md
migrations/: 001_initial_schema.sql
nginx/: shade.conf
src/: lib.rs  main.rs
src/auth/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/handlers/: admin.rs  auth.rs  mod.rs  oidc.rs  wellknown.rs
src/middleware/: mod.rs
src/models/: audit.rs  client.rs  group.rs  mod.rs  scope.rs  user.rs
src/providers/: entra.rs  github.rs  google.rs  mod.rs
src/services/: auth.rs  jwt.rs  mod.rs  oidc.rs  session.rs
src/web/: mod.rs
